--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
+    "framer-motion": "^11.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
