--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
     "next": "14.0.3",
