--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
@@ -17,6 +18,7 @@
     "gsap": "^3.12.5",
     "next": "14.0.3",
     "next-themes": "^0.3.0",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-github-calendar": "^4.1.6",
